# vortem

./: .env.example  .gitattributes  .gitignore  DEPLOYMENT.md  README.md  SESSIONS.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_contacts_leads.py  0003_pipeline_stages_deals.py  0004_notifications_webhook.py  0005_verticals.py
backend/app/: main.py
backend/app/api/v1/: auth.py  contacts.py  deals.py  leads.py  notifications.py  organizations.py  (+8 more)
backend/app/cli/: create_admin.py
backend/app/core/: config.py  logging.py  security.py
backend/app/db/: redis.py  session.py
backend/app/events/: catalog.py  publisher.py  worker.py
backend/app/middleware/: auth.py
backend/app/models/: activity.py  base.py  contact.py  deal.py  event.py  lead.py  notification.py  organization.py  pipeline.py  stage.py  user.py
backend/app/schemas/: contact.py  conversion.py  deal.py  lead.py  notification.py  organization.py  pipeline.py  stage.py  user.py  webhook.py
backend/app/services/: auth_service.py  contact_service.py  conversion_service.py  deal_service.py  lead_service.py  notification_service.py  pipeline_service.py  report_service.py  setup_service.py  stage_service.py  supervisor_service.py  user_service.py  webhook_service.py
backend/tests/: conftest.py  test_auth.py  test_cli_create_admin.py  test_contacts.py  test_conversion.py  test_deals.py  test_leads.py  test_notifications.py  test_org_isolation.py  test_outbox.py  test_pipelines.py  test_reports.py  test_setup.py  test_supervisor.py  test_users.py  test_verticals.py  test_webhooks.py
(+55 files in other folders)
